--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.40.173.54:9980/</sonar.host.url>
-		<sonar.login>squ_4d0f6a516ccaf75de3a36d98e27aa90f36d927d4</sonar.login>
+		<sonar.host.url>http://34.130.21.83:9000//</sonar.host.url>
+		<sonar.login>sqa_b86141fadcd14e8c619883171bdbee707921cdd3</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -97,14 +97,10 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://52.56.95.185:9980/mithuntechnologies/repository/icicibank-releases/</url>
+	      <url>http://130.211.114.95:8081/repository/maven-web-application/</url>
 	    </repository>
 	    
-	    <snapshotRepository>
-	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://52.56.95.185:9980/mithuntechnologies/repository/icicibank-snapshot/</url>
-	    </snapshotRepository>
+	 
 	    
 	</distributionManagement>
 	
